# OmniCamera

./: .gitignore  Cargo.toml  LICENSE  README.md  Readme.md  pyproject.toml
.github/workflows/: CI.yml
camerata/: __init__.py
examples/: 00_query_cameras.py  01_capture_image.py  02_capture_formats.py  03_camera_controls.py  capture_formats.py  capture_image.py  query_cameras.py
omni_camera/: __init__.py
src/: lib.rs
