[package]
name = "camerata"
version = "0.4.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "camerata"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.15.1", features = ["extension-module", "macros"] }
nokhwa = { version = "0.9.4", features = ["input-v4l", "input-msmf", "output-threaded", "input-avfoundation"] }
image = "0.23"
parking_lot = "^0.11"
