[package]
name = "omni_camera"
version = "0.6.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "omni_camera"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.15.1", features = ["extension-module", "macros"] }
nokhwa = { git="https://github.com/l1npengtul/nokhwa.git", branch="0.10", features = ["input-v4l", "input-msmf", "output-threaded", "input-avfoundation"] }
image = "0.24.7"
parking_lot = "^0.11"
