[package]
name = "omni_camera"
version = "0.6.3"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "omni_camera"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.4", features = ["extension-module", "macros", "abi3-py39", "generate-import-lib"] }
nokhwa = { version = "0.10.7", features = ["input-v4l", "input-msmf", "output-threaded", "input-avfoundation"] }
image = { version="0.25.6", default-features = false }
parking_lot = "^0.11"
