[build-system]
requires = ["maturin>=1.1"]
build-backend = "maturin"

[project]
name = "omni_camera"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
]

